@@ -1,8 +1,9 @@
-2018-03-19
+2018-03-26
 
         * Bug fix version 1.5.1 released
         ================================
 
+        Fix MANPATH for Mac OS X systems (#2420)
         Add kludge to handle noisy CTA 2D energy dispersion (#2342, #2403).
         Prevent unintentional deallocation of arguments (#2340).
         Correct sky map smoothing.
